welcome.lessons.welcome.bat.bool1.In3050.scala.error
in3050:1: error: type mismatch;
 found   : Unit
 required: Boolean
def in3050(a:Int, b:Int):Boolean = {
                                   ^