welcome.lessons.welcome.bat.bool1.In3050.scala.code
def in3050(a:Int, b:Int):Boolean = {

	
}

def appartient(a:Int, x:Int, y:Int):Boolean = 
{
	(a >= x) && (a <= y);
}
